fixed all alignments

--- a/dhruthi/static/css/dhruthi.css
+++ b/dhruthi/static/css/dhruthi.css
@@ -951,7 +951,7 @@ i.bi-youtube:hover{
 .carousel-img img{
   min-height: 350px;
   width: 420px !important;
-  border-radius: 15px !important;
+  border-radius: 5px !important;
   margin-top: 55px !important;
 }
 
@@ -963,12 +963,11 @@ i.bi-youtube:hover{
   display:flex;
   flex-direction: column;
   justify-content: center;
-  
   align-items: center;
 }
 .award-content h3{
   color: rgb(243, 231, 62) !important;
-  margin-top: 50PX !important;
+  margin-top: 48PX !important;
   padding-top: 20px !important;
 }
 .award-content P{
